--- a/src/styles/utilities/_helpers.scss
+++ b/src/styles/utilities/_helpers.scss
@@ -6,7 +6,7 @@
 
 @use "../abstracts/config" as *;
 
-@if $enable-debuger {
+@if $enable-debugger {
   .NuvoUI-Debugger-Wrapper {
     color: #fff;
     font-family: Arial, sans-serif;
