--- a/src/styles/utilities/_index.scss
+++ b/src/styles/utilities/_index.scss
@@ -3,6 +3,7 @@
 // Forward all utility files
 @forward "alignment";
 @forward "animations";
+@forward "backdrop-filters";
 @forward "borders";
 @forward "colors";
 @forward "container-queries";
