transform classes added

--- a/src/styles/utilities/_index.scss
+++ b/src/styles/utilities/_index.scss
@@ -17,6 +17,7 @@
 @forward "sizing";
 @forward "spacing";
 @forward "tooltips";
+@forward "transforms";
 @forward "transitions";
 @forward "typography";
 @forward "z-index";
